--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 						<h1>
 						My Portfolio
 						</h1>
-						<p>My name is Zornitsa S. <br />
+						<p>My name is Zory S. <br />
 							I am passionate designer and developer.<br />
 							HTML, CSS, JavaScript, C#, Python Projects</p>						 	
 						<ul class="actions">
