--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <li><a  class="nav" href="#projects"> PROJECTS</a> </li>  
             </ul>
             <button id="ham" class="header">
-                    <img id="menu" src="../pictures/01 copy.gif"/> 
+                    <img id="menu" src="/pictures/01 copy.gif"/> 
             </button>
             </div>
             <ul id ="menu-column">
